refactor: api 테스트 보일러 플레이트 분리
- AbstractApiDocumentationTest
  - api 문서화를 위한 설정
  - dbCleaner를 비롯한 테스트 베이스 설정 : setUp
  - 오버라이딩을 허용하기 위해 setUp의 접근제어자 protected